# pangolin

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  DEVLOG.md  E2E_TESTS.md  LICENSE  LICENSE-RATIONALE.md  POC_README.md  README.md  SECURITY.md  THREAT_MODEL.md  deny.toml  rust-toolchain.toml  rustfmt.toml
apps/cli/: Cargo.toml
apps/cli/src/: cli.rs  config.rs  lib.rs  main.rs  sync.rs
apps/cli/src/commands/: account.rs  authority.rs  balance.rs  flush.rs  import.rs  mod.rs  pull.rs  pull_status.rs  queue_status.rs  resolve.rs  status.rs  sync_loop.rs  sync_mode.rs  top_up.rs  vault.rs  wallet.rs
apps/cli/tests/: account_lifecycle.rs  authority.rs  cli_arg_parsing.rs  cli_v1_smoke.rs  import_kdbx.rs  integration_base_sepolia.rs  resolve_interactive.rs  sync_loop.rs  sync_loop_live.rs  two_vault_roundtrip.rs  vault_create_lifecycle.rs  vault_export_restore.rs
apps/desktop/: .gitignore  Cargo.toml  README.md  build.rs  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tauri.conf.json  tsconfig.json  vite.config.ts
apps/desktop/capabilities/: default.json
apps/desktop/e2e/: .gitignore  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  wdio.conf.ts
apps/desktop/e2e/setup/: build-fixture-vault.ts  start-tauri-driver.ts
apps/desktop/e2e/specs/: boot_to_choose_vault.test.ts  copy_password_via_rust_command.test.ts  helpers.ts  reveal_password_for_account.test.ts  unlock_rejects_wrong_password.test.ts  unlock_with_correct_password.test.ts
apps/desktop/src/: error.rs  lib.rs  main.rs  state.rs  test_hooks.rs
apps/desktop/src/commands/: account.rs  install_native_host.rs  mod.rs  pairing.rs  recovery.rs  vault.rs
apps/desktop/src/ipc/: dispatch.rs  mod.rs
apps/desktop/src/ui/: App.css  App.tsx  main.tsx  test-setup.ts
apps/native-messaging-host/: Cargo.toml
apps/native-messaging-host/src/: auth.rs  error.rs  frame.rs  ipc.rs  lib.rs  main.rs  manifest.rs  paths.rs
crates/pangolin-chain/: Cargo.toml  RUNBOOK.md
crates/pangolin-chain/src/: adapter.rs  balance_check.rs  balance_monitor.rs  base_sepolia.rs  chain_submit.rs  chain_sync.rs  deployments.rs  error.rs  evm.rs  lib.rs  mock.rs  recovery_client.rs  recovery_signing.rs  revisionlog_v2_client.rs  revisionlog_v2_signing.rs  secp256k1_signing.rs  signing.rs  test_env.rs  types.rs
crates/pangolin-chain/src/chain_sync/: filtering_asserter.rs  poll.rs  reorg.rs  tests.rs  v2.rs  ws.rs
crates/pangolin-chain/src/privacy/: default.rs  enhanced.rs  mod.rs  tests.rs
crates/pangolin-chain/tests/: baseline_capture.rs  deployment_json_pins_match_rust_constants.rs  fixture_no_secrets.rs  fixture_provenance.rs  hermetic_ws.rs  integration.rs  no_empty_ignored_tests.rs  ws_mock_server.rs
crates/pangolin-cli/: Cargo.toml
crates/pangolin-cli/src/: main.rs
crates/pangolin-core/: Cargo.toml
crates/pangolin-core/src/: composition.rs  device_add.rs  error.rs  guardian_invite.rs  lib.rs  pairing_transport.rs  pwgen.rs  rotation.rs
crates/pangolin-core/src/device/: mod.rs
crates/pangolin-core/src/identity/: mod.rs
crates/pangolin-core/src/recovery/: mod.rs  orchestration.rs
crates/pangolin-core/tests/: anvil_device_e2e.rs  composition_recovery.rs  composition_rotation.rs  onboard_recover_roundtrip.rs
crates/pangolin-crypto/: Cargo.toml  clippy.toml
crates/pangolin-crypto/src/: aead.rs  escrow.rs  guardian.rs  kdf.rs  keys.rs  lib.rs  pairing.rs  rng.rs  secret.rs  share_transport.rs  sign.rs
crates/pangolin-crypto/tests/: test_vectors.rs
crates/pangolin-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/pangolin-ffi/src/: balance.rs  cabi.rs  capture_authority.rs  chain_config.rs  device.rs  error.rs  guardian_identity.rs  identity.rs  identity_bridge.rs  kdbx.rs  lib.rs  pairing.rs  publish_queue.rs  recovery_backup.rs  recovery_ffi.rs  recovery_lifecycle.rs  reveal.rs  revision.rs  rotation_ffi.rs  session.rs  sync_mode.rs  sync_status.rs  totp.rs
crates/pangolin-ffi/tests/: anvil_pairing_e2e.rs  error_taxonomy.rs  identity.rs  roundtrip.rs  session.rs  totp_e2e.rs
crates/pangolin-funder-client/: Cargo.toml
crates/pangolin-funder-client/src/: lib.rs
crates/pangolin-indexer/: Cargo.toml
crates/pangolin-indexer/src/: cipher.rs  error.rs  handshake.rs  lib.rs  protocol.rs  session.rs
crates/pangolin-indexer/tests/: crash_cleanup.rs  handshake_ipc.rs  hermetic.rs  live_per_column_wrap.rs  parity.rs  proptest_aad_perturbations.rs  raw_disk_no_plaintext_per_column.rs  replay_d017_fixture_parity.rs  replay_d017_revision_no_plaintext_per_column.rs
crates/pangolin-kdbx/: Cargo.toml
crates/pangolin-kdbx/src/: crypto.rs  error.rs  header.rs  kdf.rs  lib.rs  map.rs  payload.rs  read.rs  xml.rs
crates/pangolin-kdbx/tests/: roundtrip.rs  scale.rs
crates/pangolin-store/: Cargo.toml
crates/pangolin-store/benches/: search_10k.rs
crates/pangolin-store/src/: account.rs  blob.rs  capture_authority.rs  conflict.rs  device.rs  dirty.rs  error.rs  export.rs  lib.rs  meta.rs  multi_device.rs  pending.rs  publish.rs  pull.rs  recovery_backup.rs  recovery_backup_bip39_wordlist.rs  recovery_escrow.rs  recovery_recipient.rs  revision.rs  schema.rs  search.rs  session.rs  sync_status.rs  vault.rs  vdk_chain.rs
crates/pangolin-store/tests/: conflict_live.rs  e2e.rs  export_roundtrip.rs  pull_live.rs  replay_d017_pull_batch_advances_checkpoint.rs  replay_d017_sync_status_transitions.rs  sync_status_live.rs
crates/pangolin-totp/: Cargo.toml
crates/pangolin-totp/src/: lib.rs  parse.rs
services/funder/: Cargo.toml
services/funder/src/: config.rs  error.rs  ledger.rs  lib.rs  main.rs  rate_limit.rs  resume.rs  signer.rs
tools/chaincli/: Cargo.toml
tools/chaincli/src/: client.rs  contract.rs  format.rs  main.rs
tools/chaincli/tests/: integration.rs
tools/design-tokens-gen/: Cargo.toml
tools/design-tokens-gen/src/: main.rs
tools/pangolin-cli/: Cargo.toml
tools/pangolin-cli/src/: cli.rs  config.rs  keystore.rs  lib.rs  main.rs  sync.rs  vault_open.rs
tools/pangolin-cli/tests/: offline_mode.rs  two_vault_roundtrip.rs
(+365 files in other folders)
