[workspace]
resolver = "2"
members = [
    "crates/pangolin-core",
    "crates/pangolin-crypto",
    "crates/pangolin-store",
    "crates/pangolin-chain",
    "crates/pangolin-indexer",
    "crates/pangolin-funder-client",
    "crates/pangolin-cli",
]

# Workspace-wide dependency pins. Crypto-bearing crates are restricted to the
# allow-list defined in `docs/issue-plans/P1.md` and enforced by `deny.toml`.
[workspace.dependencies]
# Cryptographic primitives — vetted RustCrypto + dalek-cryptography crates.
chacha20poly1305 = { version = "=0.10.1", default-features = false, features = ["alloc", "getrandom"] }
argon2            = { version = "=0.5.3", default-features = false, features = ["alloc", "zeroize"] }
ed25519-dalek     = { version = "=2.2.0", default-features = false, features = ["std", "zeroize", "rand_core"] }
hkdf              = { version = "=0.12.4", default-features = false }
sha2              = { version = "=0.10.9", default-features = false }
zeroize           = { version = "=1.8.2", default-features = false, features = ["zeroize_derive", "alloc"] }
subtle            = { version = "=2.6.1", default-features = false }
rand_core         = { version = "=0.6.4", default-features = false, features = ["getrandom"] }
static_assertions = "=1.1.0"

# Storage primitives for `pangolin-store` (P2). `rusqlite` ships SQLite
# vendored via the `bundled` feature so no system dependency drift is
# possible across Linux/Windows/macOS hosts. `ciborium-ll` is the
# *low-level* CBOR encoder/decoder that does NOT pull serde (the
# higher-level `ciborium` crate would). Per `docs/issue-plans/P2.md` and
# the workspace serde-ban policy in `deny.toml`, no serde is permissible
# anywhere in the workspace dep tree.
rusqlite          = { version = "=0.39.0", default-features = false, features = ["bundled"] }
ciborium-ll       = { version = "=0.2.2", default-features = false, features = ["alloc"] }
ciborium-io       = { version = "=0.2.2", default-features = false, features = ["std"] }
thiserror         = "=2.0.18"

# Test-only.
proptest          = "=1.7.0"
hex               = "=0.4.3"
tempfile          = "=3.13.0"

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.83"
license = "Apache-2.0"
authors = ["Kelvinsinferno Studio"]
repository = "https://github.com/kelvinsinferno/pangolin"
publish = false

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Known-noisy lints we explicitly accept:
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_const_for_fn = "allow"
multiple_crate_versions = "allow"

[workspace.lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"
unused_must_use = "deny"

# Profile tuning — fast-ish dev builds, optimized release.
[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
debug = false

[profile.test]
opt-level = 0
debug = true
