[workspace]
resolver = "2"
members = [
    "crates/pangolin-core",
    "crates/pangolin-crypto",
    "crates/pangolin-store",
    "crates/pangolin-chain",
    "crates/pangolin-indexer",
    "crates/pangolin-funder-client",
    "crates/pangolin-ffi",
    "crates/pangolin-totp",
    "crates/pangolin-kdbx",
    "apps/cli",
    "tools/chaincli",
    "services/funder",
]

# Workspace-wide dependency pins. Crypto-bearing crates are restricted to the
# allow-list defined in `docs/issue-plans/P1.md` and enforced by `deny.toml`.
[workspace.dependencies]
# Cryptographic primitives — vetted RustCrypto + dalek-cryptography crates.
chacha20poly1305 = { version = "=0.10.1", default-features = false, features = ["alloc", "getrandom"] }
argon2            = { version = "=0.5.3", default-features = false, features = ["alloc", "zeroize"] }
ed25519-dalek     = { version = "=2.2.0", default-features = false, features = ["std", "zeroize", "rand_core"] }
hkdf              = { version = "=0.12.4", default-features = false }
sha2              = { version = "=0.10.9", default-features = false }
# MVP-1 issue 1.7 — RFC 6238 TOTP. `pangolin-totp` pulls its own HMAC +
# SHA-1/SHA-256/SHA-512 (Q1: blast-contained; never reaches
# `pangolin-crypto` / `pangolin-core`). `hmac 0.12.1` is already in the
# lock via `hkdf`; `sha1` is the only genuinely-new transitive. SHA-1's
# collision weakness does not affect HMAC-SHA1. No `deny.toml` change —
# that file is a denylist, not an allowlist; these crates aren't denied.
hmac              = { version = "=0.12.1", default-features = false }
sha1              = { version = "=0.10.6", default-features = false }
zeroize           = { version = "=1.8.2", default-features = false, features = ["zeroize_derive", "alloc"] }
subtle            = { version = "=2.6.1", default-features = false }
rand_core         = { version = "=0.6.4", default-features = false, features = ["getrandom"] }
static_assertions = "=1.1.0"

# Storage primitives for `pangolin-store` (P2). `rusqlite` ships SQLite
# vendored via the `bundled` feature so no system dependency drift is
# possible across Linux/Windows/macOS hosts. `ciborium-ll` is the
# *low-level* CBOR encoder/decoder that does NOT pull serde (the
# higher-level `ciborium` crate would). Per `docs/issue-plans/P2.md` and
# the workspace serde-ban policy in `deny.toml`, no serde is permissible
# anywhere in the workspace dep tree.
rusqlite          = { version = "=0.39.0", default-features = false, features = ["bundled"] }
ciborium-ll       = { version = "=0.2.2", default-features = false, features = ["alloc"] }
ciborium-io       = { version = "=0.2.2", default-features = false, features = ["std"] }
thiserror         = "=2.0.18"

# Test-only.
proptest          = "=1.7.0"
hex               = "=0.4.3"
tempfile          = "=3.13.0"

# P6 + P7 — alloy-rs ecosystem. Originally landed for P6's `chaincli`
# debug oracle CLI; P7 (`pangolin-chain`) extends the consumer set
# beyond `tools/chaincli/` to include the workspace's library chain
# adapter. The isolation discipline preserved from P6 is unchanged: the
# only crates that name these workspace deps are `tools/chaincli/` and
# `crates/pangolin-chain/` — `pangolin-crypto` does NOT reach the alloy
# transitive set (HIGH-1: `cargo tree -p pangolin-crypto | grep serde`
# stays 0).
#
# Pinning rationale (`=X.Y.Z`):
#   - `alloy = "=2.0.4"` — modern async EVM client; pinned to the
#     latest 2.x release. The 1.x line carries an internal version-skew
#     issue (`alloy-rpc-types-eth = 1.0.9` does not compile against
#     transitively-resolved `alloy-consensus = 1.8.x` — the
#     `BlobTransactionSidecarVariant` symbol moved); 2.0.4 has all
#     `alloy-*` family crates aligned and is what crates.io flags as
#     "latest stable" at the time of the P6 build.
#   - `alloy-signer-local = "=2.0.4"` — same family; the `keystore`
#     feature is opted in so chaincli can decrypt Foundry-format
#     keystores. Foundry's keystore is the Web3 Secret Storage v3
#     format (scrypt-then-AES-CTR); chaincli does not invent crypto
#     here, it delegates to alloy's vetted keystore path.
#   - `tokio = "=1.52.2"` — async runtime; chaincli only uses
#     `rt-multi-thread` + `macros`. Pinned past RUSTSEC-2025-0023
#     (broadcast-channel `Sync`-bound unsoundness fixed in 1.44.2+).
#   - `clap = "=4.5.21"` — `derive` + `env` features; CLI framing.
#   - `serde_json = "=1.0.133"` — JSON-Lines output. Read-only;
#     chaincli does NOT deserialize attacker-controlled bytes (the on-chain
#     `encPayload` is printed raw as hex/base64; never parsed structurally).
#   - `anyhow = "=1.0.95"` — error propagation in this binary-only crate.
alloy             = { version = "=2.0.4", features = ["json", "rpc-types", "signer-local", "signers"] }
alloy-signer-local = { version = "=2.0.4", default-features = false, features = ["keystore"] }
tokio             = { version = "=1.52.2", default-features = false, features = ["rt-multi-thread", "macros", "signal", "time", "sync"] }
clap              = { version = "=4.5.21", default-features = false, features = ["std", "derive", "env", "help", "usage", "error-context"] }
serde_json        = { version = "=1.0.133", default-features = false, features = ["std"] }
anyhow            = "=1.0.95"
# Reads a password from a terminal without echoing keystrokes, falling
# back to plain stdin when not a TTY. Used by `tools/chaincli/`
# `publish` for the Foundry-keystore prompt. Pure Rust + std only;
# license Apache-2.0; no FFI; no crypto.
rpassword         = "=7.4.0"

# P7 — `pangolin-chain` consumes the same alloy/tokio pins as `chaincli`
# above. `async-trait` is added because Rust's stable async-fn-in-trait
# (RPITIT) does not yet support the dyn-compatible `ChainAdapter: Send +
# Sync` shape that `pangolin-store` will hold via `&dyn ChainAdapter`.
# Pinned to the latest 0.1.x release at the time of P7. The crate is a
# proc-macro that expands `async fn` in trait position to
# `Pin<Box<dyn Future + Send>>`; no runtime dep, no FFI.
async-trait       = "=0.1.89"

[workspace.package]
version = "0.0.0"
edition = "2021"
# MVP-1 issue 1.1 (Q5) pinned the workspace MSRV to 1.94 — last known-clean
# stable before 1.95's `clippy::map-unwrap-or` lint. The exact toolchain
# is also pinned in `rust-toolchain.toml` (channel = "1.94.0").
rust-version = "1.94"
license = "AGPL-3.0-or-later"
authors = ["Kelvinsinferno Studio"]
repository = "https://github.com/kelvinsinferno/pangolin"
publish = false

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Known-noisy lints we explicitly accept:
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_const_for_fn = "allow"
multiple_crate_versions = "allow"

[workspace.lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"
unused_must_use = "deny"

# Profile tuning — fast-ish dev builds, optimized release.
[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
debug = false

[profile.test]
opt-level = 0
debug = true
