[package]
name = "pangolin-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false
description = "pangolin-cli — user-facing PoC sync orchestrator. Drives publish + pull + status against a local vault and the deployed RevisionLogV0 (D-014)."

[[bin]]
name = "pangolin-cli"
path = "src/main.rs"

[lints]
workspace = true

[features]
# Network-dependent end-to-end tests are gated behind this feature so
# the default `cargo test --workspace --lib` does not attempt to reach
# `https://sepolia.base.org`. Mirrors `tools/chaincli` and
# `crates/pangolin-chain` flags. CI runs without this feature; humans
# enable it for manual smoke verification of the full publish/pull
# round-trip against the deployed contract.
integration-tests = []

[dependencies]
# Local crates — pangolin-cli is the orchestrator binary that wires the
# encrypted local store (pangolin-store) to the chain transport
# (pangolin-chain) plus the device-key signing path (pangolin-crypto).
# pangolin-cli ships both `src/main.rs` (the binary entry point) and
# `src/lib.rs` (an internal-use library surface) as of P8-6 — Cargo's
# binary-crate model does not let integration tests under `tests/*.rs`
# import a binary's modules, so the same source files compile as both
# library AND binary. The library is intentionally NOT a public API —
# external consumers should depend on `pangolin-store` + `pangolin-chain`
# directly. See the `lib.rs` module-doc for details.
pangolin-store  = { path = "../../crates/pangolin-store" }
pangolin-chain  = { path = "../../crates/pangolin-chain" }
pangolin-crypto = { path = "../../crates/pangolin-crypto" }
# MVP-1 issue 1.8: `--generate-password` routes through the one true
# generator (`pangolin_core::pwgen`) instead of a divergent local copy.
pangolin-core   = { path = "../../crates/pangolin-core" }
# MVP-1 issue 1.7: parse a TOTP secret (bare base32 or `otpauth://` URI)
# from `--totp-stdin` / the interactive prompt into the decoded seed
# bytes. `pangolin-totp` is a near-leaf (own `hmac`/`sha1`/`sha2`, no
# `uniffi`/`serde`).
pangolin-totp   = { path = "../../crates/pangolin-totp" }
# MVP-1 issue 1.9: `pangolin-cli import <file.kdbx>` — the hand-rolled
# read-only KDBX parser + KeePassXC→AccountIdentity mapper. Leaf crate;
# allowed consumers are `pangolin-ffi` (the frozen `kdbx_import` body)
# and this CLI (per docs/issue-plans/1.9.md L2). Never reaches
# `pangolin-store` / `pangolin-core` / `pangolin-crypto`'s trees.
pangolin-kdbx   = { path = "../../crates/pangolin-kdbx" }

# alloy is needed for the deployment-file loader Path resolution + the
# Foundry-keystore loader. Same workspace pin chaincli uses; the audit
# surface is shared. We do NOT pull `alloy-signer-local` here directly
# because pangolin-chain's `BaseSepoliaAdapter::new_with_keystore` does
# the keystore decryption inside the chain crate.
alloy              = { workspace = true }
alloy-signer-local = { workspace = true }

tokio      = { workspace = true }
clap       = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
hex        = { workspace = true }
# rpassword reads keystore + vault passwords without echo. Pure Rust +
# std only; license Apache-2.0; no FFI; no crypto.
rpassword  = { workspace = true }
# zeroize wraps the keystore-password `String` so the heap buffer is
# overwritten on drop rather than merely deallocated. Same pattern as
# tools/chaincli/src/commands/publish.rs.
zeroize    = { workspace = true }

[dev-dependencies]
# Integration tests need temp vault paths.
tempfile           = { workspace = true }
# Test-only ChainAdapter impls (always-fail, flaky) live in
# `src/sync.rs::tests` and need `#[async_trait]` to satisfy the
# trait's dyn-compatible shape. Same workspace pin pangolin-chain
# uses.
async-trait        = { workspace = true }
# `MockChainAdapter` is gated behind `pangolin-chain`'s `test-utilities`
# feature; we enable it ONLY in dev-dependencies so the production
# build of `pangolin-cli` cannot link against the mock.
pangolin-chain     = { path = "../../crates/pangolin-chain", features = ["test-utilities"] }
# `pangolin-store::test-utilities` exposes the deterministic-clock /
# presence-proof helpers for driving a `Vault` through the publish/pull
# flow without a real session prompt.
pangolin-store     = { path = "../../crates/pangolin-store", features = ["test-utilities"] }
# `pangolin-kdbx::test_writer` builds fixture `.kdbx` byte streams for
# the `import` integration test.
pangolin-kdbx      = { path = "../../crates/pangolin-kdbx", features = ["test-writer"] }
