[package]
name = "pangolin-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false
description = "pangolin-desktop — Tauri v2 desktop shell hosting the closed-beta UX. Bridges the React 19 frontend (apps/desktop/src/ui/) to the `pangolin-ffi` surface via `tauri::command` handlers. See docs/issue-plans/mvp4-b-desktop-shell.md."

[lib]
name = "pangolin_desktop_lib"
path = "src/lib.rs"

[[bin]]
name = "pangolin-desktop"
path = "src/main.rs"

[lints]
workspace = true

[features]
# MVP-4-F: end-to-end UX gate feature flag.
#
# When enabled, the `src/test_hooks.rs` module is compiled in + the
# two `__test__*` Tauri commands (`__test__commands_invoked`,
# `__test__clear_invocations`) are registered in `lib.rs::build_app`.
# Privileged-secret command bodies (`reveal_password`,
# `copy_password_to_clipboard`) push their NAME (no params, no values)
# onto a process-global log so the WebDriverIO suite can assert that
# the H-1 invariant — "the Rust-side clipboard command fired, not a
# JS-side copy" — held.
#
# CI's `desktop-e2e` job sets this flag (`cargo build -p
# pangolin-desktop --features test-hooks`). Production release builds
# DO NOT set it; the existing `desktop` CI job continues to build
# without the flag as a regression-catch on the feature-gate hygiene.
#
# Plan-LOCK: docs/issue-plans/mvp4-f-desktop-e2e.md §3.2 + §6.
test-hooks = []

[dependencies]
# Workspace-internal: the FFI surface this shell wraps + the design-token
# constants exposed to the Rust side (the React side reads the CSS-var
# mirror via `@pangolin/component-library`'s bundled tokens.css).
pangolin-ffi = { path = "../../crates/pangolin-ffi" }
pangolin-design-tokens = { path = "../design-tokens" }
# MVP-4-E: the native-messaging-host crate exposes the shared
# manifest/paths/auth helpers used by the install-native-host CLI
# subcommand. The desktop side does NOT execute the host's main()
# (Chrome spawns it as a subprocess) — only the helper modules are
# imported. The CI job `desktop` builds this transitively.
pangolin-native-messaging-host = { path = "../native-messaging-host" }
# MVP-4-E: pangolin-crypto's rng + zeroize for the handshake-token
# generation in `install_native_host`. The plan §3.4 spec calls for
# `pangolin_crypto::rng::fill_random` directly so the host token
# uses the SAME OsRng-chokepoint as the rest of the workspace.
pangolin-crypto = { path = "../../crates/pangolin-crypto" }
# MVP-4-E: cross-platform OS keychain for storing the handshake
# token. Same crate + same feature set as the host crate, so the
# desktop installs to the same backend the host reads from.
keyring = { version = "=3.6.3", default-features = false, features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
    "crypto-rust",
] }
# MVP-4-E: interprocess for the desktop's IPC server task (binds
# the per-user pipe/socket the host connects to).
interprocess = { version = "=2.2.3", features = ["tokio"] }
# MVP-4-E: serde_json for the IPC dispatch path (JSON-RPC parse +
# response serialization).
serde_json = { workspace = true }
# MVP-4-E: base64 for the handshake-token wire-form encoding.
# Already in the workspace lock as a transitive of alloy 2.0; this
# direct pin keeps the dep arrow explicit.
base64 = "=0.22.1"

# Tauri v2.x desktop shell + the clipboard-manager plugin (the single
# host-controlled affordance the minimum surface uses, per plan §3.2).
# Pinned to the latest 2.x patch at the time of the MVP-4-B build per
# plan §5 Q-b (= 2.11.2 for `tauri`, = 2.3.2 for the plugin). Bump in
# lockstep with cargo-deny advisories.
tauri = { version = "=2.11.2", default-features = false, features = ["wry"] }
tauri-plugin-clipboard-manager = "=2.3.2"

# Workspace-pinned deps. `tokio` powers Tauri's async runtime + the
# `tauri::command` async handlers; `zeroize` is the discipline tool for
# any local password buffer the host side touches (we forward immediately
# to `pangolin-ffi`'s `SecretPassword`, but the JS-string-to-Rust hop
# still benefits from the zeroizing wrap).
tokio = { workspace = true }
zeroize = { workspace = true }
# `thiserror` derives `Display` for the local `DesktopError`; the FFI
# side already pulls it so the dep tree shape is unchanged.
thiserror = { workspace = true }
# `serde` powers the `tauri::command` argument/return serialization —
# Tauri's `invoke()` bridge uses serde under the hood. Note this dep
# does NOT reach `pangolin-crypto`'s tree: the desktop crate depends on
# `pangolin-ffi` (which already has serde as a transitive via uniffi) +
# `pangolin-design-tokens` (a zero-dep generated crate). HIGH-1 is
# preserved because the dep arrow is `desktop -> ffi`, never the reverse.
serde = { version = "=1.0.228", features = ["derive"] }

[build-dependencies]
# Tauri v2 emits resource files + Info.plist / manifest assets through
# its build script. Required even for a minimum-surface build.
tauri-build = { version = "=2.6.2", features = [] }

[dev-dependencies]
# Hermetic Rust-side tests use an on-disk vault built via `pangolin-ffi`'s
# real-path vault_create + vault_open + vault_unlock surface (per plan
# §1 hermetic-test requirements). `tempfile` is the workspace-standard
# tmpdir helper.
tempfile = { workspace = true }
# `pangolin-store`'s `test-utilities` feature is already enabled across
# the workspace's `cargo test --workspace` build (mirrors the
# `crates/pangolin-ffi/Cargo.toml` dev-dep pattern); no new surface.
pangolin-store = { path = "../../crates/pangolin-store", features = ["test-utilities"] }
pangolin-core = { path = "../../crates/pangolin-core" }
# (pangolin-crypto + serde_json are also prod-deps as of MVP-4-E;
# the dev-dep entries collapse via cargo's dep-table unification.)
