[package]
name = "pangolin-chain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "EVM chain adapter — direct submit; signed-revision builder; no relay layer."

[lints]
workspace = true
